testsuite/bsc.interra/messages/EUnknownSize/EUnknownSize2.bs.bsc-out.expected
checking package dependencies
compiling EUnknownSize2.bs
Error: "EUnknownSize2.bs", line 18, column 7: (T0035)
  Bit vector of unknown size introduced near this location.
  Please remove unnecessary extensions, truncations and concatenations and/or
  provide more type information to resolve this ambiguity.
